Fertige Codelogik + JUnit Tests