@@ -1,77 +1,225 @@
 package th.rosenheim.oop.logic;
 
-import th.rosenheim.oop.enums.DifficultyLevel;
-import th.rosenheim.oop.enums.ExperienceLevel;
-import th.rosenheim.oop.enums.MuscleGroup;
-import th.rosenheim.oop.model.CardioWorkout;
-import th.rosenheim.oop.model.Exercise;
-import th.rosenheim.oop.model.StrengthWorkout;
+import th.rosenheim.oop.enums.*;
+import th.rosenheim.oop.model.*;
 
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
+import java.util.stream.Collectors;
+
 
 /**
- * Erzeugt Workouts basierend auf Erfahrungslevel und Trainingslogik.
+ * Der PlanGenerator erzeugt Trainingspläne basierend auf Trainingsziel
+ * und Erfahrungslevel.
+ * Pro Trainingstag werden maximal zwei Muskelgruppen trainiert.
  */
 public class PlanGenerator {
 
+    //Wochentage
+    private static final List<String> WEEK_DAYS = Arrays.asList(
+            "Montag",
+            "Dienstag",
+            "Mittwoch",
+            "Donnerstag",
+            "Freitag",
+            "Samstag",
+            "Sonntag"
+    );
+
+    //Feste Rest Days
+    private static final Set<String> REST_DAYS =
+            new HashSet<>(Arrays.asList("Donnerstag", "Sonntag"));
+
+
     /**
-     * Erstellt ein Krafttraining mit mehreren Übungen pro Muskelgruppe,
-     * abhängig vom Erfahrungslevel des Benutzers.
-     *
+     * Erzeugt einen Wochen-Trainingsplan für einen Benutzer.
+     * Die Anzahl der Kraft- und Kardiotage hängt vom Trainingsziel ab.
+     * @param user Benutzer, für den der Plan erzeugt wird
      * @param allExercises alle verfügbaren Übungen
-     * @param level Erfahrungslevel des Benutzers
-     * @return StrengthWorkout
+     * @return Trainingsplan für eine Woche
      */
-    public StrengthWorkout createStrengthWorkout(List<Exercise> allExercises,
-                                                 ExperienceLevel level) {
+    public TrainingPlan generateWeeklyPlan(User user,
+                                           List<Exercise> allExercises) {
 
-        // Gruppierung: Muskelgruppe -> Liste von Übungen
-        Map<MuscleGroup, List<Exercise>> groupedExercises = new HashMap<>();
+        List<TrainingDay> generatedTrainingDays = new ArrayList<>();
 
-        for (Exercise exercise : allExercises) {
-            if (isAllowedDifficulty(level, exercise.getDifficulty())) {
+        //Anzahl der Trainingsarten bestimmen
+        int strengthDays;
+        int cardioDays;
 
-                groupedExercises
-                        .computeIfAbsent(exercise.getMuscleGroup(),
-                                g -> new ArrayList<>())
-                        .add(exercise);
+        if (user.getTrainingGoal() == TrainingGoal.MUSCLE_GAIN) {
+            strengthDays = 4;
+            cardioDays = 1;
+        } else { // FAT_LOSS
+            strengthDays = 2;
+            cardioDays = 3;
+        }
+
+        //Maximal zwei Muskelgruppen pro Trainingstag
+        List<List<MuscleGroup>> muscleGroupSplits = new ArrayList<>(Arrays.asList(
+                Collections.singletonList(MuscleGroup.CHEST),
+                Collections.singletonList(MuscleGroup.BACK),
+                Collections.singletonList(MuscleGroup.LEGS),
+                Collections.singletonList(MuscleGroup.SHOULDERS),
+                Arrays.asList(MuscleGroup.ARMS, MuscleGroup.CORE)
+        ));
+
+        //Durchmischen für Abwechslung im Wochenplan
+        Collections.shuffle(muscleGroupSplits);
+
+        //Krafttrainingstage erzeugen
+        for (int i = 0; i < strengthDays; i++) {
+
+            List<MuscleGroup> trainedGroups = muscleGroupSplits.get(i);
+
+            //Passende Übungen für die Muskelgruppen auswählen
+            List<Exercise> selectedExercises =
+                    selectExercisesForMuscleGroups(
+                            allExercises,
+                            trainedGroups,
+                            user.getExperienceLevel()
+                    );
+
+            StrengthWorkout strengthWorkout =
+                    new StrengthWorkout(selectedExercises);
+
+            TrainingDay day = new TrainingDay("Krafttag " + (i + 1));
+            day.addWorkout(strengthWorkout);
+
+            generatedTrainingDays.add(day);
+        }
+
+        //Kardiotage erzeugen
+        for (int i = 0; i < cardioDays; i++) {
+
+            List<CardioExercise> cardioExercises = CardioCatalog.getAllCardioExercises();
+            //Trainingstage mischen (Kraft und Cardio)
+            Collections.shuffle(generatedTrainingDays);
+
+            //Woche mit Rest Days erzeugen
+            List<TrainingDay> week = new ArrayList<>();
+
+            CardioExercise cardioExercise = cardioExercises.get(0);
+
+            CardioWorkout cardioWorkout =
+                    createCardioWorkout(cardioExercise, user.getExperienceLevel());
+
+            TrainingDay day = new TrainingDay("Cardio " + (i + 1));
+            day.addWorkout(cardioWorkout);
+
+            generatedTrainingDays.add(day);
+        }
+
+        //Woche mit Rest Days erzeugen
+        List<TrainingDay> week = new ArrayList<>();
+        int trainingIndex = 0;
+
+        for (String weekday : WEEK_DAYS) {
+
+            if (REST_DAYS.contains(weekday)) {
+                week.add(new TrainingDay(weekday));
+                continue;
+            }
+
+            if (trainingIndex < generatedTrainingDays.size()) {
+
+                TrainingDay trainingDay = generatedTrainingDays.get(trainingIndex);
+                TrainingDay dayWithWeekName = new TrainingDay(weekday);
+
+                for (Workout workout : trainingDay.getWorkouts()) {
+                    dayWithWeekName.addWorkout(workout);
+                }
+
+                week.add(dayWithWeekName);
+                trainingIndex++;
+
+            } else {
+                week.add(new TrainingDay(weekday));
             }
         }
 
-        // Alle Übungen wieder zu einer Liste zusammenführen
+        //Trainingsplan mit allen erzeugten Trainingstagen zurückgeben
+        return new TrainingPlan(
+                user.getExperienceLevel(),
+                user.getTrainingGoal(),
+                week
+        );
+    }
+
+    /**
+     * Wählt passende Übungen für die angegebenen Muskelgruppen aus.
+     * Dabei werden sowohl Erfahrungslevel als auch Schwierigkeitsgrad berücksichtigt.
+     * @param allExercises alle verfügbaren Übungen
+     * @param muscleGroups Muskelgruppen des Trainingstags
+     * @param level Erfahrungslevel des Benutzers
+     * @return Liste der ausgewählten Übungen
+     */
+    private List<Exercise> selectExercisesForMuscleGroups(
+            List<Exercise> allExercises,
+            List<MuscleGroup> muscleGroups,
+            ExperienceLevel level) {
+
         List<Exercise> selectedExercises = new ArrayList<>();
 
-        for (List<Exercise> groupList : groupedExercises.values()) {
-            selectedExercises.addAll(groupList);
+        // Maximale Anzahl an Übungen pro Muskelgruppe
+        int maxExercisesPerGroup = getMaxExercisesPerMuscleGroup(level);
+
+        for (MuscleGroup group : muscleGroups) {
+
+            // Filtert Übungen nach Muskelgruppe und erlaubter Schwierigkeit
+            List<Exercise> filteredExercises = allExercises.stream()
+                    .filter(e -> e.getMuscleGroup() == group)
+                    .filter(e -> isAllowedDifficulty(level, e.getDifficulty()))
+                    .limit(maxExercisesPerGroup)
+                    .collect(Collectors.toList());
+
+            selectedExercises.addAll(filteredExercises);
         }
 
-        if (selectedExercises.isEmpty()) {
-            throw new IllegalStateException(
-                    "Keine passenden Kraftübungen für dieses Erfahrungslevel gefunden."
-            );
-        }
+        return selectedExercises;
+    }
 
-        return new StrengthWorkout(selectedExercises);
+    /**
+     * Legt fest, wie viele Übungen pro Muskelgruppe
+     * abhängig vom Erfahrungslevel erlaubt sind.
+     * @param level Erfahrungslevel
+     * @return maximale Anzahl an Übungen pro Muskelgruppe
+     */
+    private int getMaxExercisesPerMuscleGroup(ExperienceLevel level) {
+
+        switch (level) {
+            case BEGINNER:
+                return 2;
+            case INTERMEDIATE:
+                return 3;
+            case ADVANCED:
+                return 4;
+            case EXPERT:
+                return 5;
+            default:
+                return 2;
+        }
     }
 
     /**
      * Erstellt ein Cardio-Workout mit genau einer Übung.
-     *
-     * @param cardioExercise Cardio-Übung (z. B. Schwimmen)
+     * @param cardioExercise Cardio-Übung (z. B. Joggen)
      * @param level Erfahrungslevel des Benutzers
      * @return CardioWorkout
      */
     public CardioWorkout createCardioWorkout(Exercise cardioExercise,
                                              ExperienceLevel level) {
-        return new CardioWorkout(List.of(cardioExercise), level);
+
+        return new CardioWorkout(
+                // Erzeugt eine Liste mit genau einem Element
+                // (ein Cardio-Workout besteht aus genau einer Übung)
+                Collections.singletonList(cardioExercise),
+                // Übergabe des Erfahrungslevels
+                level
+        );
     }
 
     /**
      * Prüft, ob eine Übung für das gegebene Erfahrungslevel erlaubt ist.
-     *
      * @param level Erfahrungslevel
      * @param difficulty Schwierigkeitsgrad der Übung
      * @return true, wenn erlaubt
@@ -84,15 +232,12 @@ public class PlanGenerator {
                 return difficulty == DifficultyLevel.EASY;
 
             case INTERMEDIATE:
+            case ADVANCED:
                 return difficulty == DifficultyLevel.EASY
                         || difficulty == DifficultyLevel.MEDIUM;
 
-            case ADVANCED:
-                return difficulty == DifficultyLevel.MEDIUM;
-
             case EXPERT:
-                return difficulty == DifficultyLevel.MEDIUM
-                        || difficulty == DifficultyLevel.HARD;
+                return true; // alle Schwierigkeitsgrade erlaubt
 
             default:
                 return false;
